core: updated robot definition
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ example_URK.glo
 example_URK.ist
 example_URK.lol
 example_URK.synctex.gz
+main.acn
+main.acr
+main.alg
+main.glg
+main.glo
+main.gls
+main.ist
+main.lol
+main.pdf
+main.synctex.gz
